<resources>
    <string name="app_name">PayMe</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="hint_name">Username</string>
    <string name="btn_register">Register</string>
    <string name="btn_Link_to_Login">Already registered</string>
    <string name="btn_Link_to_Register">Don\'t have an account</string>
    <string name="hint_user">Username</string>
    <string name="password_empty_error">Password can not be empty</string>
    <string name="username_empty_error">Username can not be empty</string>
    <string name="login_error">Login failed. Check username and password</string>
    <string name="login_successful">Login Successful</string>
    <string name="logging_in">Logging in</string>
    <string name="email_empty_error">E-Mail can not be empty</string>
    <string name="username_taken_error">Register failed. Username already in use.</string>
    <string name="registering">Registering</string>
    <string name="email_in_use_error">E-Mail already in use</string>
    <string name="password_match_error">Passwords are not the same</string>
    <string name="database_error">Database Error. Please try again later.</string>
    <string name="hint_password_repeat">Repeat password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="registration_link_message">Check your mails. You got a registration link</string>
    <string name="remember_me_checkbox_text">Remember me</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="pm_title">Title</string>
    <string name="pm_description">Description (optional)</string>
    <string name="pm_price">Price</string>
    <string name="empty_title_error">Please enter a title</string>
    <string name="empty_price_error">Please enter a price</string>
    <string name="price_format_error">Only numbers are allowed here</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="payme_fragment_tab_title">PayMe\'s</string>
    <string name="paythem_fragment_tab_title">PayThem\'s</string>
    <string name="refreshBtnText">Refresh</string>
    <string name="sending_pm_dialog_message">Sending&#8230;</string>
    <string name="logout_btn">Logout</string>
    <string name="logout_progress_dialog_message">Logging out</string>
    <string name="action_send_title">action_send</string>
    <string name="action_add_contact">Add person</string>
    <string name="search_hint">Search users</string>
    <string name="no_data_message">No data</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="hint_search_user">Search for user</string>
</resources>
